--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,18 +14,23 @@
 * {
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  text-decoration: none;
 }
 
 body {
-  margin: 0;
+  place-items: center;
+  display: grid;
+  margin: 20px;
   width: 100%;
   height: 100vh;
-  display: grid;
-  place-items: center;
 }
 
 h1,p {
   color: var(--container-color);
+}
+
+h1 {
+  display: inline;
 }
 
 p.ufl::first-letter {
@@ -120,3 +125,94 @@ input[data-error] {
   box-shadow: 0px 20px 36px rgba(0, 0, 0, 0.452);
   color: white;
 }
+
+
+
+
+
+
+
+
+
+button.logout:hover{
+  cursor: pointer;
+}
+
+button.logout {
+  background: transparent; 
+  outline: none;
+  position: relative;
+  border: 2px solid #111;
+  padding: 15px 50px;
+  overflow: hidden;
+  top: 0;
+}
+
+button.logout:hover:before{
+  opacity: 1; 
+  transform: translate(0,0);
+}
+
+button.logout:before{
+  content: attr(data-hover);
+  position: absolute;
+  top: 1.1em; 
+  left: 0;
+  width: 100%;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-weight: 800;
+  font-size: .8em;
+  opacity: 0;
+  transform: translate(-100%,0);
+  transition: all .3s ease-in-out;
+}
+
+button.logout:hover div{
+  opacity: 0; 
+  transform: translate(100%,0);
+}
+
+button.logout div{
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-weight: 800;
+  font-size: .8em;
+  transition: all .3s ease-in-out;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
