--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,10 @@ body {
   height: 100vh;
 }
 
+form {
+  width: 100%;
+}
+
 h1,p {
   color: var(--container-color);
 }
@@ -116,6 +120,7 @@ input[data-error] {
   cursor: pointer;
   transition: .3s;
 }
+
 .button:hover{
   background-color: var(--container-color);
   box-shadow: 0px 20px 36px rgba(0, 0, 0, 0.452);
@@ -175,4 +180,9 @@ button.logout div{
   font-weight: 800;
   font-size: .8em;
   transition: all .3s ease-in-out;
+}
+
+
+p.ufl::first-letter {
+  text-transform: uppercase;
 }
