--- a/paciente/style.css
+++ b/paciente/style.css
@@ -10,11 +10,10 @@
 :root{
     /* ===== Colors ===== */
     --body-color: #E4E9F7;
-    --sidebar-color: #FFF;
-    --primary-color: #695CFE;
+    --sidebar-color: #0C102B;
+    --primary-color: #0C102B;
     --primary-color-light: #F6F5FF;
-    --toggle-color: #DDD;
-    --text-color: #707070;
+    --text-color: #0C102B;
 
     /* ====== Transition ====== */
     --tran-03: all 0.2s ease;
@@ -25,22 +24,8 @@
 
 body{
     min-height: 100vh;
-    background-color: var(--body-color);
+    background-color: #0C102B;
     transition: var(--tran-05);
-}
-
-::selection{
-    background-color: var(--primary-color);
-    color: #fff;
-}
-
-body.dark{
-    --body-color: #18191a;
-    --sidebar-color: #242526;
-    --primary-color: #3a3b3c;
-    --primary-color-light: #3a3b3c;
-    --toggle-color: #fff;
-    --text-color: #ccc;
 }
 
 /* ===== Sidebar ===== */
@@ -51,12 +36,13 @@ body.dark{
     height: 100%;
     width: 250px;
     padding: 10px 14px;
-    background: var(--sidebar-color);
+    background: #0C102B;
     transition: var(--tran-05);
     z-index: 100;  
 }
+
 .sidebar.close{
-    width: 88px;
+    width: 90px;
 }
 
 /* ===== Reusable code - Here ===== */
@@ -86,7 +72,7 @@ body.dark{
 
 .sidebar .text,
 .sidebar .icon{
-    color: var(--text-color);
+    color: #fff;
     transition: var(--tran-03);
 }
 
@@ -143,8 +129,8 @@ header .image-text .profession{
     transform: translateY(-50%) rotate(180deg);
     height: 25px;
     width: 25px;
-    background-color: var(--primary-color);
-    color: var(--sidebar-color);
+    background-color: #fff;
+    color: #0C102B;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -155,7 +141,7 @@ header .image-text .profession{
 }
 
 body.dark .sidebar header .toggle{
-    color: var(--text-color);
+    color: #fff;
 }
 
 .sidebar.close .toggle{
@@ -166,29 +152,11 @@ body.dark .sidebar header .toggle{
     margin-top: 40px;
 }
 
-.sidebar li.search-box{
-    border-radius: 6px;
-    background-color: var(--primary-color-light);
-    cursor: pointer;
-    transition: var(--tran-05);
-}
-
-.sidebar li.search-box input{
-    height: 100%;
-    width: 100%;
-    outline: none;
-    border: none;
-    background-color: var(--primary-color-light);
-    color: var(--text-color);
-    border-radius: 6px;
-    font-size: 17px;
-    font-weight: 500;
-    transition: var(--tran-05);
-}
 .sidebar li a{
     list-style: none;
     height: 100%;
     background-color: transparent;
+    color: #fff;
     display: flex;
     align-items: center;
     height: 100%;
@@ -199,15 +167,13 @@ body.dark .sidebar header .toggle{
 }
 
 .sidebar li a:hover{
-    background-color: var(--primary-color);
+    background-color: #fff;
+    color: #0C102B;
 }
+
 .sidebar li a:hover .icon,
 .sidebar li a:hover .text{
     color: var(--sidebar-color);
-}
-body.dark .sidebar li a:hover .icon,
-body.dark .sidebar li a:hover .text{
-    color: var(--text-color);
 }
 
 .sidebar .menu-bar{
@@ -217,32 +183,16 @@ body.dark .sidebar li a:hover .text{
     justify-content: space-between;
     overflow-y: scroll;
 }
+
 .menu-bar::-webkit-scrollbar{
     display: none;
 }
+
 .sidebar .menu-bar .mode{
     border-radius: 6px;
     background-color: var(--primary-color-light);
     position: relative;
     transition: var(--tran-05);
-}
-
-.menu-bar .mode .sun-moon{
-    height: 50px;
-    width: 60px;
-}
-
-.mode .sun-moon i{
-    position: absolute;
-}
-.mode .sun-moon i.sun{
-    opacity: 0;
-}
-body.dark .mode .sun-moon i.sun{
-    opacity: 1;
-}
-body.dark .mode .sun-moon i.moon{
-    opacity: 0;
 }
 
 .menu-bar .bottom-content .toggle-switch{
@@ -295,7 +245,6 @@ body.dark .switch::before{
 .home .text{
     font-size: 30px;
     font-weight: 500;
-    color: var(--text-color);
     padding: 12px 60px;
 }
 
@@ -304,9 +253,7 @@ body.dark .switch::before{
     height: 100vh;
     width: calc(100% - 78px);
 }
-body.dark .home .text{
-    color: var(--text-color);
-}
+
 
 p.ufl::first-letter {
     text-transform: uppercase;
