--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ h1 {
 .input__icon {
   color: var(--container-color);
   cursor: pointer;
+  margin-left: 150px;
 }
 
 .input__password {
@@ -58,6 +59,7 @@ h1 {
   outline: none;
   font-size: 14px;
   z-index: 1;
+  width: 60%;
 }
 
 .input__password::placeholder {
@@ -176,4 +178,9 @@ button.logout div{
 
 p.ufl::first-letter {
   text-transform: uppercase;
+}
+
+
+.form {
+  min-width: 400px;
 }
