--- a/assets/css/style-sidebar.css
+++ b/assets/css/style-sidebar.css
@@ -271,3 +271,53 @@ body.dark .switch::before{
 p.ufl::first-letter {
     text-transform: uppercase;
 }
+
+
+
+
+
+
+
+
+
+/*TABLE STYLES                                              */
+.tabla {
+  width:100%;
+  table-layout: fixed;
+  border: 1px solid black;
+}
+.tbl-header{
+  background-color: #0C102B;
+}
+
+.tbl-content{
+  height: 800px;
+  overflow-x:auto;
+  margin-top: 0px;
+  border: 1px solid #0C102B;
+}
+
+tr {
+    border: 1px solid #0C102B;
+}
+
+th{
+    width: 1300px;
+  padding: 20px 15px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 14px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+td{
+  width: 1300px;
+  padding: 15px;
+  text-align: center;
+  vertical-align:middle;
+  font-weight: 300;
+  font-size: 12px;
+  color: #000;
+  border-bottom: solid 1px #0C102B;
+}
