--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,208 +1,320 @@
-/*=============== VARIABLES CSS ===============*/
-:root {
-  /*========== Colors ==========*/
-  --first-color: hsl(232, 54%, 43%);
-  --text-color: hsl(232, 8%, 35%);
-  --white-color: white;
-  --body-color: hsl(232, 45%, 90%);
-  --container-color: hsl(232, 54%, 11%);
+/* Google Font Import - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-/*=============== INPUT PASSWORD ===============*/
-* {
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-  text-decoration: none;
+:root{
+    /* ===== Colors ===== */
+    --body-color: #E4E9F7;
+    --sidebar-color: #0C102B;
+    --primary-color: #0C102B;
+    --primary-color-light: #F6F5FF;
+    --text-color: #0C102B;
+
+    /* ====== Transition ====== */
+    --tran-03: all 0.2s ease;
+    --tran-03: all 0.3s ease;
+    --tran-04: all 0.3s ease;
+    --tran-05: all 0.3s ease;
 }
 
-body {
-  place-items: center;
-  display: grid;
-  margin: 20px;
-  width: 100%;
-  height: 100vh;
+body{
+    min-height: 100vh;
+    background-color: #0C102B;
+    transition: var(--tran-05);
 }
 
 h1 {
-  color: var(--container-color);
-  display: inline;
+    color: #0C102B;
 }
 
-.input {
-  position: relative;
-  background-color: var(--container-color);
-  padding: 1.35rem 1.25rem;
-  border-radius: .5rem;
-  display: flex;
-  align-items: center;
-  column-gap: .75rem;
+p {
+    color: #0C102B;
 }
 
-.input__lock, .input__icon {
-  font-size: 1.25rem;
-  z-index: 1;
+.white {
+    color: white;
+}
+/* ===== Sidebar ===== */
+ .sidebar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 250px;
+    padding: 10px 14px;
+    background: #0C102B;
+    transition: var(--tran-05);
+    z-index: 100;  
 }
 
-.input__lock, .input__password {
-  color: var(--white-color);
+.sidebar.close{
+    width: 90px;
 }
 
-.input__icon {
-  color: var(--container-color);
-  cursor: pointer;
-  margin-left: 150px;
+/* ===== Reusable code - Here ===== */
+.sidebar li{
+    height: 50px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
 }
 
-.input__password {
-  background: transparent;
-  border: none;
-  outline: none;
-  font-size: 14px;
-  z-index: 1;
-  width: 60%;
+.sidebar header .image,
+.sidebar .icon{
+    min-width: 60px;
+    border-radius: 6px;
 }
 
-.input__password::placeholder {
-  color: var(--white-color);
+.sidebar .icon{
+    min-width: 60px;
+    border-radius: 6px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
 }
 
-.input__overlay {
-  width: 32px;
-  height: 32px;
-  background-color: var(--white-color);
-  position: absolute;
-  right: .9rem;
-  border-radius: 50%;
-  z-index: 0;
-  transition: .4s ease-in-out;
+.sidebar .text,
+.sidebar .icon{
+    color: #fff;
+    transition: var(--tran-03);
 }
 
-/* Transition effect */
-.overlay-content {
-  width: 100%;
-  height: 100%;
-  border-radius: .5rem;
-  right: 0;
+.sidebar .text{
+    font-size: 17px;
+    font-weight: 500;
+    white-space: nowrap;
+    opacity: 1;
 }
 
-.overlay-content ~ .input__lock {
-  color: var(--container-color);
+.sidebar.close .text{
+    opacity: 0;
 }
 
-.overlay-content ~ .input__password,
-.overlay-content ~ .input__password::placeholder {
-  color: var(--text-color);
+/* =========================== */
+.sidebar header{
+    position: relative;
 }
 
-input[data-error] {
-  background-color: white;
-  color: blue;
+.sidebar header .image-text{
+    display: flex;
+    align-items: center;
+}
+.sidebar header .logo-text{
+    display: flex;
+    flex-direction: column;
+}
+header .image-text .name {
+    margin-top: 2px;
+    font-size: 18px;
+    font-weight: 600;
 }
 
-.button{
-  width: 100%;
-  padding: 1rem;
-  font-size: var(--normal-font-size);
-  outline: none;
-  border: none;
-  margin-bottom: 3rem;
-  background-color: transparent;
-  border:  2px solid var(--container-color);
-  color: var(--container-color);
-  border-radius: .5rem;
-  cursor: pointer;
-  transition: .3s;
+header .image-text .profession{
+    font-size: 16px;
+    margin-top: -2px;
+    display: block;
 }
 
-.button:hover{
-  background-color: var(--container-color);
-  box-shadow: 0px 20px 36px rgba(0, 0, 0, 0.452);
-  color: white;
+.sidebar header .image{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-
-
-
-
-
-
-
-
-button.logout:hover{
-  cursor: pointer;
+.sidebar header .image img{
+    width: 40px;
+    border-radius: 6px;
 }
 
-button.logout {
-  background: transparent; 
-  outline: none;
-  position: relative;
-  border: 2px solid #111;
-  padding: 15px 50px;
-  overflow: hidden;
-  top: 0;
+.sidebar header .toggle{
+    position: absolute;
+    top: 50%;
+    right: -25px;
+    transform: translateY(-50%) rotate(180deg);
+    height: 25px;
+    width: 25px;
+    background-color: #fff;
+    color: #0C102B;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+    cursor: pointer;
+    transition: var(--tran-05);
 }
 
-button.logout:hover:before{
-  opacity: 1; 
-  transform: translate(0,0);
+body.dark .sidebar header .toggle{
+    color: #fff;
 }
 
-button.logout:before{
-  content: attr(data-hover);
-  position: absolute;
-  top: 1.1em; 
-  left: 0;
-  width: 100%;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  font-weight: 800;
-  font-size: .8em;
-  opacity: 0;
-  transform: translate(-100%,0);
-  transition: all .3s ease-in-out;
+.sidebar.close .toggle{
+    transform: translateY(-50%) rotate(0deg);
 }
 
-button.logout:hover div{
-  opacity: 0; 
-  transform: translate(100%,0);
+.sidebar .menu{
+    margin-top: 40px;
 }
 
-button.logout div{
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  font-weight: 800;
-  font-size: .8em;
-  transition: all .3s ease-in-out;
+.sidebar li a{
+    list-style: none;
+    height: 100%;
+    background-color: transparent;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    border-radius: 6px;
+    text-decoration: none;
+    transition: var(--tran-03);
 }
 
+.sidebar li a:hover{
+    background-color: #fff;
+    color: #0C102B;
+}
+
+.sidebar li a:hover .icon,
+.sidebar li a:hover .text{
+    color: var(--sidebar-color);
+}
+
+.sidebar .menu-bar{
+    height: calc(100% - 55px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow-y: scroll;
+}
+
+.menu-bar::-webkit-scrollbar{
+    display: none;
+}
+
+.sidebar .menu-bar .mode{
+    border-radius: 6px;
+    background-color: var(--primary-color-light);
+    position: relative;
+    transition: var(--tran-05);
+}
+
+.menu-bar .bottom-content .toggle-switch{
+    position: absolute;
+    right: 0;
+    height: 100%;
+    min-width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.toggle-switch .switch{
+    position: relative;
+    height: 22px;
+    width: 40px;
+    border-radius: 25px;
+    background-color: var(--toggle-color);
+    transition: var(--tran-05);
+}
+
+.switch::before{
+    content: '';
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    background-color: var(--sidebar-color);
+    transition: var(--tran-04);
+}
+
+body.dark .switch::before{
+    left: 20px;
+}
+
+.home{
+    position: absolute;
+    top: 0;
+    top: 0;
+    left: 250px;
+    height: 100vh;
+    width: calc(100% - 250px);
+    background-color: var(--body-color);
+    transition: var(--tran-05);
+}
+
+.home .text{
+    font-size: 30px;
+    font-weight: 500;
+    padding: 12px 60px;
+}
+
+.sidebar.close ~ .home{
+    left: 78px;
+    height: 100vh;
+    width: calc(100% - 78px);
+}
 
 p.ufl::first-letter {
+    text-transform: uppercase;
+}
+
+
+
+
+
+
+
+
+
+/*TABLE STYLES                                              */
+.tabla {
+  width:100%;
+  table-layout: fixed;
+}
+
+.tbl-header{
+  background-color: #0C102B;
+}
+
+.tbl-content{
+  height: 800px;
+  overflow-x: auto;
+  overflow-y: auto;
+  margin-top: 0px;
+  border: 1px solid #0C102B;
+}
+
+th{
+    width: 1300px;
+  padding: 20px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 14px;
+  color: #fff;
   text-transform: uppercase;
 }
 
-
-.form {
-  min-width: 400px;
+td{
+  width: 1300px;
+  padding: 15px;
+  text-align: center;
+  vertical-align:middle;
+  font-weight: 300;
+  font-size: 12px;
+  color: #000;
+  border-bottom: solid 1px #0C102B;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
