--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,11 +291,11 @@ p.ufl::first-letter {
 }
 
 .tbl-content{
+    width:100%;
   height: 800px;
   overflow-x: auto;
-  overflow-y: auto;
   margin-top: 0px;
-  border: 1px solid #0C102B;
+  border-bottom: 1px solid #0C102B;
 }
 
 th{
@@ -309,7 +309,7 @@ th{
 }
 
 td{
-  width: 1300px;
+  width: 100%;
   padding: 15px;
   text-align: center;
   vertical-align:middle;
